# essentia_video_editor_plugin

./: Cargo.toml  README.md
src/: assets.rs  config.rs  converter.rs  effects.rs  errors.rs  evlf_types.rs  flexforge.rs  gpu_pipeline.rs  lib.rs  metadata.rs  plugin.rs  tests.rs  timeline.rs  types.rs
src/errors/: mod.rs  video_editor_error.rs
src/impl/: assets.rs  audio_mixer.rs  color_grading.rs  config.rs  effects.rs  export_pipeline.rs  gpu_pipeline.rs  keyframe_animation.rs  marker_system.rs  mod.rs  plugin.rs  preview_manager.rs  project_manager.rs  timeline.rs  transitions.rs
src/implementation/: audio_mixer.rs  color_grading.rs  export_pipeline.rs  keyframe_animation.rs  marker_system.rs  plugin.rs  project_manager.rs  timeline.rs
src/implementation/export_pipeline/: formats.rs  job.rs  mod.rs  queue.rs
src/traits/: mod.rs
src/types/: clip.rs  codec.rs  color.rs  core.rs  frame.rs  mod.rs  pipeline.rs  timeline.rs
